# nicla-vision-cmake

./: CMakeLists.txt  README.md
cmake/: include_local_library.cmake  nicla_vision.cmake  toolchain.cmake
cmake/libraries/: arduino_wifi.cmake  socket_wrapper.cmake
lib/ArduinoBLE/: CMakeLists.txt
scripts/: upload
src/: CMakeLists.txt  main.cpp  src.ino
